[package]
name = "rust-sasa-python"
version = "0.7.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_sasa_python"
crate-type = ["cdylib"]

[dependencies]
pdbtbx = "0.12.0"
pyo3 = "0.25.1"
rust-sasa = "0.9.1"
mimalloc = "0.1.47"
num-complex = "0.4.6"
pulp = "0.22.2"
