[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust-sasa-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "An ultra-fast package for computing Solvent Accessible Surface Area (SASA/ASA) for proteins"
readme = "README.md"
authors = [
    { name="Max Campbell" },
]

[tool.maturin]
features = ["pyo3/extension-module"]
