[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust-sasa-python"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "An ultra-fast package for computing Solvent Accessible Surface Area (SASA/ASA) for proteins\n**46X** faster than Biopython, **7X** faster than Freesasa"
readme = "README.md"
authors = [{ name = "Max Campbell" }]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "maturin>=1.5,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
